...

object LogoutTestTags {
  const val LOGOUT_BUTTON = "logout_button"
  const val ALERT_DIALOG = "alert_dialog"
  const val ALERT_TITLE = "alert_title"
  const val ALERT_TEXT = "alert_text"
  const val ALERT_CONFIRM_BUTTON = "alert_confirm_button"
  const val ALERT_CANCEL_BUTTON = "alert_cancel_button"
}

