...
  const val CHAT_SCREEN = "ChatScreen"
  const val CHAT_INSTANCE_SCREEN = "ChatInstanceScreen"
  const val PROFILE_SCREEN = "ProfileScreen"
  const val OTHER_PROFILE_SCREEN = "OtherProfileScreen"
  const val SIGN_IN_SCREEN = "SignInScreen"
  const val ADD_PROFILE_SCREEN = "AddProfileScreen"
  const val SEARCH_PROFILE_SCREEN = "SearchProfileScreen"
  const val SETTINGS_SCREEN = "SettingsScreen"
  const val SELECT_TAG_SCREEN_USER = "SelectTagScreenUser"
  const val SELECT_TAG_SCREEN_EVENT = "SelectTagScreenEvent"
  const val SELECT_TAG_SCREEN_EVENT_EDITION = "SelectTagScreenEventEdition"
  const val SELECT_TAG_SCREEN_SETTINGS = "SelectTagScreenSettings"
  const val EMAIL_VALIDATION_SCREEN = "EmailValidationScreen"
...
